# agenthub

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
src/agenthub/: __init__.py
src/agenthub/api/: __init__.py  routes.py
src/agenthub/api/agent/: __init__.py  evolution.py  history.py  rollback.py  self_evolution.py  utils.py
src/agenthub/api/hub/: __init__.py  delete_agent.py  export.py  get_agent.py  init_agent.py  list_agent_names.py  list_agents.py
src/agenthub/backend/: __init__.py  agenthub_backend.py
src/agenthub/builtin_skills/agent/evolution/: SKILL.md
src/agenthub/builtin_skills/agent/self-evolution/: SKILL.md
src/agenthub/builtin_skills/hub/init-agent/: SKILL.md
src/agenthub/core/: __init__.py  companion.py  config.py  errors.py  lock.py  pokemon_db.py  types.py  vcs.py
src/agenthub/runtime/: __init__.py  executor.py
src/agenthub/storage/: __init__.py
tests/: conftest.py  test_api.py  test_backend.py  test_companion.py  test_core.py  test_e2e.py  test_e2e_real.py  test_executor.py  test_routes.py
